20

* added more combinations to the dice game, e.g., 5=4+1, 5=3+2
* fixed bug in sprite library
* using refactored card generator

19

* fixed bug with Mayan 33
* cleaned up some icons that had SVG problems on old Sugar builds

18

* word game lists can be edited
* Mayan number game
* "fileless" SVG generation
* fixed SVG problem on old Sugar builds

17

* fixed Class problem with command-line version
* cleaned up license language (GPL v3)

16

* fixed bug preventing play on old Sugar instances
* simple sharing/collaborating
* save/resume from Journal 
* new (improved?) toolbar layout
* match-history animation at end game

15

* added low/high levels for game play
* new activity icon

14

* computer assistant

13

* more number games

12

* reverting to three colors to simplify game play
* experimenting with different number-game card styles
* adding bold and italic to word cards
* consolidate grid after dealing extra cards
* refactoring of sprites library

11

* add check for match on first deal
* fixed bug in extra card positions

10

* es, fr translation
* rotated cards to enable larger/longer text strings
* cleaned up match logic for word games

9

* auto-deal of extra cards when needed
* added glue for launching outside of Sugar
* save "low score" to Journal
* added numbers and words games
* autogenerate cards on the fly
* minutes:seconds display for total time
* general code cleanup

8

* fixed bug in new game labels
* added unselect

7

* more distinct colors on cards
* count seconds between matches
* detect game over
* automatically deals extra cards when necessary

6

* fixed card selection bug

5

* added search function

4

* add 3 cards when you get stuck

3

* Eliminate naming alert from pre-0.86 toolbar
* New pot file

2

* New icon
* Fixed problem with the New Game button

1

* Version 1 of a visual matching game. The object is to find sets of
  three cards where each attribute—color, shape, number of elements,