@@ -1,3 +1,8 @@
+21
+
+* general clean up of sprite library
+* updated licenses
+
 20
 
 * added more combinations to the dice game, e.g., 5=4+1, 5=3+2
